--- a/Pamin/Base.lproj/Main.storyboard
+++ b/Pamin/Base.lproj/Main.storyboard
@@ -1,26 +1,137 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="iRj-6i-0fC">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Mapa-->
+        <scene sceneID="J6p-NU-9ZL">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="sV0-tM-6Es" userLabel="Mapa" customClass="MapaViewController" customModule="Pamin" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="p0I-Ej-tjY"/>
+                        <viewControllerLayoutGuide type="bottom" id="TGw-QG-IG1"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="XcX-Mx-VJG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="88Y-B5-udw">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zq9-nJ-UTg">
+                                <rect key="frame" x="20" y="20" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="botao-location"/>
+                                <connections>
+                                    <action selector="centralizarUsuario:" destination="sV0-tM-6Es" eventType="touchUpInside" id="Ift-bW-r65"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TGw-QG-IG1" firstAttribute="top" secondItem="88Y-B5-udw" secondAttribute="bottom" id="C15-Hm-H7a"/>
+                            <constraint firstAttribute="trailing" secondItem="88Y-B5-udw" secondAttribute="trailing" id="Njb-E1-4EV"/>
+                            <constraint firstItem="88Y-B5-udw" firstAttribute="leading" secondItem="XcX-Mx-VJG" secondAttribute="leading" id="cfH-AM-Afq"/>
+                            <constraint firstItem="88Y-B5-udw" firstAttribute="top" secondItem="XcX-Mx-VJG" secondAttribute="top" id="nxG-d5-wWb"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Mapa de Eventos" id="tQ3-jc-cYD"/>
+                    <connections>
+                        <outlet property="mapa" destination="88Y-B5-udw" id="xpp-8B-zLs"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3LB-Ge-g5a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1418" y="430"/>
+        </scene>
+        <!--Listagem de Eventos-->
+        <scene sceneID="qt1-eD-xFj">
+            <objects>
+                <viewController id="rWh-bV-ckH" userLabel="Listagem de Eventos" customClass="ViewController" customModule="Pamin" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="JVt-f9-c9s"/>
+                        <viewControllerLayoutGuide type="bottom" id="ffq-d4-fYn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pcX-Z8-Qhf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mzi-fm-P3b">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celulaEvento" rowHeight="70" id="Ptc-jg-fbM" customClass="CelulaEvento" customModule="Pamin" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ptc-jg-fbM" id="0sy-7g-DqU">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titulo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GjL-2J-ZzC">
+                                                    <rect key="frame" x="8" y="8" width="359" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="GjL-2J-ZzC" firstAttribute="top" secondItem="0sy-7g-DqU" secondAttribute="topMargin" id="9Dj-G6-BlG"/>
+                                                <constraint firstItem="GjL-2J-ZzC" firstAttribute="trailing" secondItem="0sy-7g-DqU" secondAttribute="trailingMargin" id="A44-nH-bmt"/>
+                                                <constraint firstItem="GjL-2J-ZzC" firstAttribute="leading" secondItem="0sy-7g-DqU" secondAttribute="leadingMargin" id="wmh-9Y-dyJ"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="GjL-2J-ZzC" secondAttribute="bottom" constant="32.5" id="xxH-Vt-SbK"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="labelTitulo" destination="GjL-2J-ZzC" id="wgf-Hd-7Ww"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mzi-fm-P3b" firstAttribute="leading" secondItem="pcX-Z8-Qhf" secondAttribute="leading" id="3Jp-s9-9NL"/>
+                            <constraint firstItem="mzi-fm-P3b" firstAttribute="top" secondItem="JVt-f9-c9s" secondAttribute="bottom" id="DBN-zR-4Qn"/>
+                            <constraint firstItem="mzi-fm-P3b" firstAttribute="bottom" secondItem="ffq-d4-fYn" secondAttribute="top" id="Eja-Q3-2hX"/>
+                            <constraint firstAttribute="trailing" secondItem="mzi-fm-P3b" secondAttribute="trailing" id="iKx-sZ-gkn"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Lista de Eventos" id="XeU-ze-ruj"/>
+                    <connections>
+                        <outlet property="eventosTableView" destination="mzi-fm-P3b" id="bgg-Lq-X0x"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nKR-UP-nog" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1418.4000000000001" y="-264.91754122938534"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Ued-v2-98A">
+            <objects>
+                <tabBarController id="iRj-6i-0fC" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Pf1-an-FNK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="rWh-bV-ckH" kind="relationship" relationship="viewControllers" id="aQq-Yv-Bc5"/>
+                        <segue destination="sV0-tM-6Es" kind="relationship" relationship="viewControllers" id="DTJ-C6-h3P"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fkV-JB-VLy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="630" y="21"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="botao-location" width="512" height="512"/>
+    </resources>
 </document>
