--- a/Pamin/Base.lproj/Main.storyboard
+++ b/Pamin/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="iRj-6i-0fC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="iRj-6i-0fC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -25,10 +25,12 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="88Y-B5-udw">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zq9-nJ-UTg">
-                                <rect key="frame" x="20" y="20" width="30" height="30"/>
+                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zq9-nJ-UTg">
+                                <rect key="frame" x="16" y="28" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="botao-location"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
+                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button" image="location"/>
                                 <connections>
                                     <action selector="centralizarUsuario:" destination="sV0-tM-6Es" eventType="touchUpInside" id="Ift-bW-r65"/>
                                 </connections>
@@ -42,14 +44,14 @@
                             <constraint firstItem="88Y-B5-udw" firstAttribute="top" secondItem="XcX-Mx-VJG" secondAttribute="top" id="nxG-d5-wWb"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Mapa de Eventos" id="tQ3-jc-cYD"/>
+                    <tabBarItem key="tabBarItem" title="Mapa" image="map" id="tQ3-jc-cYD"/>
                     <connections>
                         <outlet property="mapa" destination="88Y-B5-udw" id="xpp-8B-zLs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3LB-Ge-g5a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1418" y="430"/>
+            <point key="canvasLocation" x="1416.8" y="429.53523238380814"/>
         </scene>
         <!--Listagem de Eventos-->
         <scene sceneID="qt1-eD-xFj">
@@ -63,32 +65,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mzi-fm-P3b">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="101" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mzi-fm-P3b">
+                                <rect key="frame" x="0.0" y="41" width="375" height="577"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celulaEvento" rowHeight="70" id="Ptc-jg-fbM" customClass="CelulaEvento" customModule="Pamin" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celulaEvento" rowHeight="101" id="Ptc-jg-fbM" customClass="CelulaEvento" customModule="Pamin" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="101"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ptc-jg-fbM" id="0sy-7g-DqU">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titulo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GjL-2J-ZzC">
-                                                    <rect key="frame" x="8" y="8" width="359" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                    <rect key="frame" x="18" y="8" width="338" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="0Qc-CJ-qK7"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categoria" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v7c-vu-OLh">
+                                                    <rect key="frame" x="18" y="8" width="338" height="74"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="GjL-2J-ZzC" firstAttribute="top" secondItem="0sy-7g-DqU" secondAttribute="topMargin" id="9Dj-G6-BlG"/>
-                                                <constraint firstItem="GjL-2J-ZzC" firstAttribute="trailing" secondItem="0sy-7g-DqU" secondAttribute="trailingMargin" id="A44-nH-bmt"/>
-                                                <constraint firstItem="GjL-2J-ZzC" firstAttribute="leading" secondItem="0sy-7g-DqU" secondAttribute="leadingMargin" id="wmh-9Y-dyJ"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="GjL-2J-ZzC" secondAttribute="bottom" constant="32.5" id="xxH-Vt-SbK"/>
+                                                <constraint firstItem="v7c-vu-OLh" firstAttribute="leading" secondItem="GjL-2J-ZzC" secondAttribute="leading" id="9C9-60-6sF"/>
+                                                <constraint firstItem="GjL-2J-ZzC" firstAttribute="centerX" secondItem="0sy-7g-DqU" secondAttribute="centerX" id="K8y-vq-per"/>
+                                                <constraint firstItem="v7c-vu-OLh" firstAttribute="trailing" secondItem="GjL-2J-ZzC" secondAttribute="trailing" id="gNh-ux-af9"/>
+                                                <constraint firstItem="GjL-2J-ZzC" firstAttribute="top" secondItem="0sy-7g-DqU" secondAttribute="topMargin" id="mSN-vG-Xu2"/>
+                                                <constraint firstItem="v7c-vu-OLh" firstAttribute="top" secondItem="GjL-2J-ZzC" secondAttribute="top" id="nkq-dV-NzW"/>
+                                                <constraint firstItem="GjL-2J-ZzC" firstAttribute="leading" secondItem="0sy-7g-DqU" secondAttribute="leadingMargin" constant="10" id="ti9-GQ-5jH"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="v7c-vu-OLh" secondAttribute="bottom" constant="10" id="zeQ-ez-83T"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="labelCategoria" destination="v7c-vu-OLh" id="3p0-qb-uSL"/>
                                             <outlet property="labelTitulo" destination="GjL-2J-ZzC" id="wgf-Hd-7Ww"/>
                                         </connections>
                                     </tableViewCell>
@@ -97,13 +112,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="mzi-fm-P3b" firstAttribute="leading" secondItem="pcX-Z8-Qhf" secondAttribute="leading" id="3Jp-s9-9NL"/>
-                            <constraint firstItem="mzi-fm-P3b" firstAttribute="top" secondItem="JVt-f9-c9s" secondAttribute="bottom" id="DBN-zR-4Qn"/>
-                            <constraint firstItem="mzi-fm-P3b" firstAttribute="bottom" secondItem="ffq-d4-fYn" secondAttribute="top" id="Eja-Q3-2hX"/>
-                            <constraint firstAttribute="trailing" secondItem="mzi-fm-P3b" secondAttribute="trailing" id="iKx-sZ-gkn"/>
+                            <constraint firstItem="mzi-fm-P3b" firstAttribute="bottom" secondItem="ffq-d4-fYn" secondAttribute="top" id="N4h-KL-PND"/>
+                            <constraint firstItem="mzi-fm-P3b" firstAttribute="top" secondItem="JVt-f9-c9s" secondAttribute="bottom" constant="21" id="VuS-Qm-gES"/>
+                            <constraint firstAttribute="trailing" secondItem="mzi-fm-P3b" secondAttribute="trailing" id="a3s-Uf-AkB"/>
+                            <constraint firstItem="mzi-fm-P3b" firstAttribute="leading" secondItem="pcX-Z8-Qhf" secondAttribute="leading" id="iov-Ax-Avn"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Lista de Eventos" id="XeU-ze-ruj"/>
+                    <tabBarItem key="tabBarItem" title="Eventos" image="evento" id="XeU-ze-ruj"/>
                     <connections>
                         <outlet property="eventosTableView" destination="mzi-fm-P3b" id="bgg-Lq-X0x"/>
                     </connections>
@@ -116,7 +131,7 @@
         <scene sceneID="Ued-v2-98A">
             <objects>
                 <tabBarController id="iRj-6i-0fC" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="Pf1-an-FNK">
+                    <tabBar key="tabBar" contentMode="scaleAspectFit" id="Pf1-an-FNK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -132,6 +147,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="botao-location" width="512" height="512"/>
+        <image name="evento" width="30" height="30"/>
+        <image name="location" width="30" height="30"/>
+        <image name="map" width="30" height="30"/>
     </resources>
 </document>
