Alterações na tela de descrição de eventos

--- a/Pamin/Base.lproj/Main.storyboard
+++ b/Pamin/Base.lproj/Main.storyboard
@@ -245,6 +245,6 @@
         <image name="map" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="doR-8i-Vlw"/>
+        <segue reference="TQN-vR-c1V"/>
     </inferredMetricsTieBreakers>
 </document>
