--- a/Pamin/Base.lproj/Main.storyboard
+++ b/Pamin/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dZA-Iv-POp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dZA-Iv-POp">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -52,6 +52,11 @@
                         <barButtonItem key="leftBarButtonItem" image="menu" id="qs3-Jp-SLj">
                             <connections>
                                 <action selector="abrirSideMenu:" destination="sV0-tM-6Es" id="xgE-Tc-Dbm"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="JGW-Uw-OEj">
+                            <connections>
+                                <segue destination="nlo-dr-XE8" kind="show" id="rzS-bt-qh4"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -276,7 +281,7 @@
                 <viewController hidesBottomBarWhenPushed="YES" id="nlo-dr-XE8" customClass="AddEventoViewController" customModule="Pamin" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Adicionar" id="0ra-GQ-UFr"/>
                     <connections>
-                        <segue destination="Rss-mt-woo" kind="presentation" identifier="voltarTelaEventos" id="3mY-8R-HCg"/>
+                        <segue destination="Rss-mt-woo" kind="presentation" identifier="adicionarCompleto" id="3mY-8R-HCg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kbx-bN-z1N" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1048,9 +1053,10 @@
         <image name="user" width="45" height="45"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="vdg-oW-i7S"/>
         <segue reference="SkA-cF-joP"/>
-        <segue reference="cgT-o5-gHM"/>
+        <segue reference="3mY-8R-HCg"/>
+        <segue reference="rzS-bt-qh4"/>
+        <segue reference="blq-HV-AcR"/>
         <segue reference="73b-SB-06s"/>
     </inferredMetricsTieBreakers>
 </document>
